# road-poneglyph

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v0.2.0-MILESTONE-AUDIT.md
.planning/phases/01-rename-hygiene/: 01-CONTEXT.md  01-PLAN-01-rename-and-hygiene.md  01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-parameterize-helpers-no-games-dict-yet/: 02-01-SUMMARY.md  02-01-golden-fixture-and-harness-PLAN.md  02-02-SUMMARY.md  02-02-extract-palworld-parse-save-PLAN.md  02-03-SUMMARY.md  02-03-parameterize-helpers-PLAN.md  02-04-SUMMARY.md  02-04-wire-typer-commands-PLAN.md  02-05-SUMMARY.md  02-05-harness-real-render-path-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-introduce-gamespec-games-dict-palworld-only/: 03-01-SUMMARY.md  03-01-add-dataclasses-and-games-registry-PLAN.md  03-02-SUMMARY.md  03-02-dissolve-pal-globals-switch-call-sites-PLAN.md  03-03-SUMMARY.md  03-03-wire-fix-steam-sdk-post-install-hook-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-REVIEW.md  03-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-typer-factory-merged-polkit/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-add-ark-entry-e2e-arkmanager-wrapper/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-E2E-RECORD.md  05-04-PLAN.md  05-05-PLAN.md  05-CONTEXT.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  satisfactory-hosting.md
docs/: CLAUDE.md  ark-install-reference.md
logpose/: CLAUDE.md  main.py
logpose/templates/: 40-logpose.rules.template  CLAUDE.md
road_poneglyph/: CLAUDE.md  main.py  satisfactory_api.py
road_poneglyph/templates/: CLAUDE.md  __init__.py  arkserver.service.template  road-poneglyph-ark.sudoers.template  satisfactory.service.template  sons.service.template
scripts/: capture_golden.py
tests/: test_ark_golden.py  test_palworld_golden.py  test_satisfactory_api.py  test_satisfactory_golden.py  test_satisfactory_ini.py  test_sons_golden.py
tests/golden/: 40-logpose.rules.v0_2_0  40-road-poneglyph.rules.v0_3_0  40-road-poneglyph.rules.v0_4_0  logpose-ark.sudoers.v0_2_0  palserver.service.v0_1_19  satisfactory.service.v0_3_0  sons.service.v0_4_0
(+27 files in other folders)
