[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "road-poneglyph"
version = "0.2.0"
authors = [
    { name = "axatbhardwaj", email = "axatbhardwaj@gmail.com" },
]
description = "A Linux dedicated game server launcher for Palworld and ARK: Survival Evolved — manages steamcmd, systemd, and polkit on Debian/Ubuntu."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer>=0.9,<0.21",
    "rich>=13.0,<14",
]

[project.scripts]
road-poneglyph = "road_poneglyph.main:app"

[tool.setuptools]
packages = ["road_poneglyph"]

[tool.setuptools.package-data]
"road_poneglyph" = ["templates/*"]
